api/app/components/Presenter/styles.css
.page {
  display: grid;
  padding: 1rem;
  grid-template-columns: 1.618fr 1fr;
  grid-template-rows: max-content 1fr;
  gap: 1rem;
  height: 100dvh;
  margin: 0 auto;
  max-width: 1400px;

  & > header {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    grid-column: 1 / 3;
    grid-row: 1 / 2;

    & > .title {
      flex: 1;
    }

    & > .logo {
      display: flex;
      flex-flow: column nowrap;
      align-items: flex-end;
    }
  }

  &.hide-qr-code {
    grid-template-columns: max-content 1fr max-content;

    & > main {
      grid-column: 1 / 3;

      & > ol {
        max-width: 860px;
        margin: 0 auto;
      }
    }

    & > aside {
      grid-column: 2 / 3;
      grid-row: 3 / 4;
    }
  }

  & > main {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    scrollbar-width: none;
    overflow-y: scroll;

    &::-webkit-scrollbar {
      display: none;
    }

    & > ol {
      list-style: none;
      /* Needed to avoid cutting of the status indicator */
      padding: 1rem 0 0 0;
      display: flex;
      flex-flow: column nowrap;
      gap: 1rem;
    }
  }

  & > aside {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: space-between;
  }
}

.font-family-meerkat {
  font-family: "Inter", sans-serif;
}

.qr-code {
  background-color: white;
  color: var(--chakra-colors-brand-975);
  border-radius: var(--chakra-radii-sm);
  padding: 1.5rem;
  width: 100%;
  max-width: 25dvw;
  /** Align with top of main content which needs extra margin */
  margin-top: 1rem;
}

.bubble {
  background-color: var(--chakra-colors-brand-contrast);
  border-radius: var(--chakra-radii-sm);
  padding: 1rem;
  position: relative;
  border: 1px solid transparent;
}

.bubble.selected {
  border-color: var(--chakra-colors-brand-500);
}

.bubble-status {
  display: flex;
  align-items: center;
  gap: 0.1rem;
  position: absolute;
  top: -13px;
  left: 1.25rem;
  background-color: var(--chakra-colors-brand-500);
  color: var(--chakra-colors-brand-contrast);
  padding: 0.25rem 0.5rem;
  border-radius: 0.5rem;
  font-size: 0.75rem;
}

.upvote-section {
  display: flex;
  justify-content: flex-end;
  margin-top: 1rem;
}

.upvote-count {
  display: inline;
  font-weight: 100;
  margin-right: 0.25rem;
  line-height: 1rem;
}

.reaction {
  position: absolute;
  bottom: 0.5rem;
  animation: floatUp 3s ease-out forwards;
}

.reactions-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  z-index: 1000;
}

@keyframes floatUp {
  0% {
    transform: translateY(0) scale(1);
    opacity: 1;
  }

  100% {
    transform: translateY(-40dvh) scale(2);
    opacity: 0;
  }
}

